# UVCCamera

./: AGENTS.md  MODERNIZATION_NOTES.md  README_thermal.md  TEST_ORCHESTRATION.md  THERMAL_XU_STATUS.md  jitpack.yml  test_thermal.sh  uvccamera-update.md
lib/src/main/jni/: Application.mk
lib/src/main/jni/UVCCamera/: Android.mk  ExtensionUnitEnumerator.cpp  ExtensionUnitEnumerator_simple.cpp  ExtensionUnitEnumerator_unsafe.cpp
usbCameraTest8/: build.gradle
usbCameraTest8/src/main/: AndroidManifest.xml
usbCameraTest8/src/main/cpp/thermal/: CMakeLists.txt  extension_unit_discovery.cpp  thermal_xu.cpp
usbCameraTest8/src/main/java/com/serenegiant/thermal/: ThermalVerificationActivity.java
usbCameraTest8/src/main/res/layout/: activity_thermal_verification.xml
